Thu Jan  3 18:35:44 2008  Tom Hughes  <tom@compton.nu>

	* Zlib.pm
	  Changed version number to 1.09.

        * Makefile.PL
          Install in the core library directory if the perl
          version is 5.9.3 or later.

Sun Nov 18 17:43:49 2007  Tom Hughes  <tom@compton.nu>

	* Zlib.pm
	  Changed version number to 1.08.

        * t/uncomp1.t
        * t/uncomp2.t
          Add the PID to the name of the temporary file used by
          several tests to avoid clashing with the directory
          called test in the perl source tree.
        
        * Zlib.pm
          Require perl 5.006 instead of 5.004 as Fcntl does not
          implement SEEK_SET before then.

        * Zlib.pm
          Removed "IO::Zlib::WRITE: OFFSET is not supported" error
          from documentation as it is no longer generated.

2007-07-28 Tom Hughes <tom@compton.nu>

	* Zlib.pm
	  Changed version number to 1.07.

        * MANIFEST
	* t/0signature.t
	  Removed signature test.

2007-07-18 Tom Hughes <tom@compton.nu>

	* Zlib.pm
	  Changed version number to 1.06.

	* t/external.t
	  Exit immediately if there is no gzip program.

2007-03-04  Tom Hughes <tom@compton.nu>

	* Zlib.pm
	  Changed version number to 1.05.

	* Zlib.pm
	  Added dummy FILENO method to stop the debugger barfing
	  when asked to dump a IO::Zlib object.

	* Zlib.pm
	  Removed internal eof flag and use gzeof instead.

	* t/getline.t
	  Added tests for the eof method while reading lines.

	* t/basic.t
	  Add test for reading at an offset.

	* Zlib.pm
	  Allow an offset to be specifed when reading or writing.

2004-09-05  Tom Hughes <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.04.

2004-08-28  Jarkko Hietaniemi <jhi@iki.fi>

	* t/0signature.t:
	  Add -ing.

	* t/external.t:
	  The skip didn't really skip.

	* t/uncomp1.t, t/uncomp2.t:
	  Make more portable by using binmode().

2004-08-22  Tom Hughes <tom@compton.nu>

	* Zlib.pm
	  Changed version number to 1.03.
