@@ -1,13 +1,13 @@
 --- #YAML:1.0
 name:                IO-Zlib
-version:             1.09
+version:             1.10
 abstract:            ~
 license:             ~
 author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.38
+generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
-    Compress::Zlib:                0
+    Compress::Zlib:                2
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
