@@ -14,12 +14,12 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8b2f00892f392893418cf9f644af74ec33b50d2d ChangeLog
+SHA1 1294902db533689f5bc0e534613a9c20a62f2f03 ChangeLog
 SHA1 f40ead6aa5d4e89ad735b103ffcb6db45b2bf287 MANIFEST
-SHA1 4b39da43e72e88f6bb01f01492e885b0cf94cbde META.yml
-SHA1 c9cf864de39665f3f1c9b46b5847f7ac2273001e Makefile.PL
+SHA1 f0d43c487bbbeef6744fa264928f9c0a0d905e8e META.yml
+SHA1 1ad952898701ef89cdfda4be888f1488463add0f Makefile.PL
 SHA1 b3b48f9e136027482f5aa97725d8fd57f2a80a71 README
-SHA1 9163da0f7e9c71354edf31aa8abe53e4e88d5f54 Zlib.pm
+SHA1 ec46f8978b3d4db6f28e6c1e404ab6f3439ea00b Zlib.pm
 SHA1 13663459f0fba824818cefedee2100bfadce3dfc t/basic.t
 SHA1 c4cca5764d5cbbf207a648ec7a3ef14de79d0c1e t/external.t
 SHA1 6e4d78228a1d59e21bee5e65d77e006357452777 t/getc.t
@@ -30,9 +30,9 @@ SHA1 521e2db5d19514345339230b4909018bafb677b6 t/tied.t
 SHA1 980956c4e4488ca131f894ea2c8408a3ee670140 t/uncomp1.t
 SHA1 7ca7f549fdee7ae406e123ace0ad9b453418c315 t/uncomp2.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.7 (GNU/Linux)
+Version: GnuPG v1.4.9 (GNU/Linux)
 
-iD8DBQFHfStcsTvgEvrnk5kRAoBAAKDGqmS+vW5a+6v9EeMWHfdWs1yAywCgm3oQ
-T7cYSLMxhurjF67PURQp/s0=
-=RYfM
+iEYEARECAAYFAkpc+XgACgkQsTvgEvrnk5n6OQCeOHQrlvMokT/6l24tAwsRYH2f
+W/oAoKgq40ac+S/VhyG/2L0bSlj5oih5
+=8Kif
 -----END PGP SIGNATURE-----
